--- a/exampleSite/content/blog/post-2023-03-21.md
+++ b/exampleSite/content/blog/post-2023-03-21.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous sommes réveillés par des ouvriers agricoles qui élaguent les bouchures du champ voisin. Nous expliquons d'où nous venons et où nous allons. Ils nous proposent du café, nous refusons poliment et nous nous remettons en route. 
