--- a/exampleSite/content/blog/post-2023-03-22.md
+++ b/exampleSite/content/blog/post-2023-03-22.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Hier soir, nous avons trouvé refuge dans un rucher abandonné. Nous avons dormi au premier après avoir déblayé les cinq centimètres de sable qui recouvraient le sol et entassé les ruches près des fenêtres pour couper le vent et ne pas être vu depuis la nationale. 
