--- a/exampleSite/content/blog/post-2023-03-25.md
+++ b/exampleSite/content/blog/post-2023-03-25.md
@@ -31,10 +31,11 @@ Après un ravitaillement en eau, nous quittons Isparta en direction de Konya. Un
 Ensuite, la route tourne. Elle nous fraie un chemin entre les reliefs. Les faux plats deviennent montants. Le vent, cherchant à descendre, travaille désormais contre nous. Nous sommes toutefois récompensés par une très belle descente sur la ville d'Egirdir. 
 
 ![image](../../images/post/sarki_velo.jpg)
-{{< youtube XXX >}}
+{{< youtube _H9PQY4uFt8 >}}
 
 Nous nous rendons sur un promontoire sur le lac éponyme. Nicolas fait décoller le drone. 
 
+{{< youtube bse9WrWbaHY >}}
 ![image](../../images/post/sarki_dronedistance.jpg)
 ![image](../../images/post/sarki_dronejetee.jpg)
 {{< youtube eE_y1MRLKvo >}}
