--- a/exampleSite/content/blog/post-2023-03-23.md
+++ b/exampleSite/content/blog/post-2023-03-23.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Aujourd'hui marque le commencement du ramadan, les appels à la prière nous semblent plus longs. 
