--- a/exampleSite/content/blog/post-2023-03-26.md
+++ b/exampleSite/content/blog/post-2023-03-26.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après avoir admiré les étoiles puis les chiens chassant les coyotes durant la soirée, la nuit fut fraîche pour certains et donc le réveil compliqué depuis ce que nous imaginons être une future salle de bain. 
