--- a/exampleSite/content/blog/post-2023-03-27.md
+++ b/exampleSite/content/blog/post-2023-03-27.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Aujourd'hui c'est repos. Nous dormons au maximum puis allons vers le centre ville à seize kilomètres. Il y a un tramway qui peut nous y emmener. Le seul problème étant qu'il nécessite une carte à la pass navigo. Bien sûr, ces cartes ne sont vendues que dans les grosses stations du centre ville. Par chance, un passager parlant anglais nous fait passer et assure le contrôleur que nous achèterons une carte une fois arrivés. 
