--- a/exampleSite/content/blog/post-2023-03-28.md
+++ b/exampleSite/content/blog/post-2023-03-28.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Dans les grandes villes, des percussionnistes patrouillent pour réveiller les musulmans pour qu'ils prennent leur petit-déjeuner avant l'appel à la prière de l'aurore. Autant dire que la fin de nuit a été mouvementée. 
