--- a/exampleSite/content/blog/post-2023-03-29.md
+++ b/exampleSite/content/blog/post-2023-03-29.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous croyions nous être débarrassés de l'hiver, voilà qu'il nous ratrappe à travers la Capaddoce, la région que nous traversons. La température est descendue à deux degrés dans la nuit. Ce matin, il pleut de la neige fondue. 
