--- a/exampleSite/content/blog/post-2023-03-30.md
+++ b/exampleSite/content/blog/post-2023-03-30.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après un petit-déjeuner copieux, nous commençons notre visite. Nous prenons tout d'abord de la hauteur pour admirer Göreme et ses cheminées de fée.
