--- a/exampleSite/content/blog/post-2023-03-31.md
+++ b/exampleSite/content/blog/post-2023-03-31.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Pour sortir de Göreme, il est nécessaire de gravir une pente à dix pour cents. Je passe ma petite vitesse et déraille. La cage de dérailleur est collée aux rayons. Nouvelle pâte de dérailleur tordue qu'il est nécessaire de changer. La journée commence bien! 
