--- a/exampleSite/content/blog/post-2023-04-01.md
+++ b/exampleSite/content/blog/post-2023-04-01.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La nuit a été très fraîche, les températures descendant à moins cinq degrés. Je n'ai malheureusement pas pu réchauffer mes pieds et donc pas dormi de la nuit. Nous décalons le réveil à dix heures trente pour rattraper ma nuit mais le mal est fait. Je me lève avec une gueule de bois stupéfiante. 
