--- a/exampleSite/content/blog/post-2023-04-02.md
+++ b/exampleSite/content/blog/post-2023-04-02.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Étant donné que je suis convalescent, nous nous autorisons une grasse matinée jusqu'à neuf heures trente. J'ai dormi onze heures. 
