--- a/exampleSite/content/blog/post-2023-04-03.md
+++ b/exampleSite/content/blog/post-2023-04-03.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons fini par trouvé un porche de ce qui semble être une maison d'expatriés après avoir tourné en rond dans la ville pendant une petite demi heure. 
