--- a/exampleSite/content/blog/post-2023-04-04.md
+++ b/exampleSite/content/blog/post-2023-04-04.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après une grasse matinée, nous traversons Ankara d'est en ouest en direction d'un magasin de vélos. Quatre kilomètres de montée descente à travers les reliefs ankariotes plus loin, nous arrivons sur place. Pourquoi s'infliger cela? Déçu du mécano d'Istanbul, j'ai fait d'extensives recherches et cette échoppe semble être notre meilleur pari. 
