--- a/exampleSite/content/blog/post-2023-04-05.md
+++ b/exampleSite/content/blog/post-2023-04-05.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Je crois que c'est le premier jour de réel repos depuis le départ. Je la ferai donc courte. Nous n'avons rien fait mis à part se balader dans le quartier pour faire des courses, lire et regarder des vidéos de cyclisme, entre autres. 
