--- a/exampleSite/content/blog/post-2023-04-06.md
+++ b/exampleSite/content/blog/post-2023-04-06.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Sur les conseils avisés d'Oguzhan, nous prenons la direction d'Anitkabir. Un bus et un trajet de métro plus tard, nous y sommes. 
