--- a/exampleSite/content/blog/post-2023-04-07.md
+++ b/exampleSite/content/blog/post-2023-04-07.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Ankara par les murs à quinze pourcents qui font son charme. Nous faisons route vers l'est et après une quinzaine de kilomètres nous sortons de la banlieue et retournons à la campagne. 
