--- a/exampleSite/content/blog/post-2023-04-09.md
+++ b/exampleSite/content/blog/post-2023-04-09.md
@@ -45,7 +45,7 @@ Nous avons encore une fois filmé plusieurs vidéos qui détaillent notre visite
 ![image](../../images/post/kusaray_tunnel.jpg)
 ![image](../../images/post/kusaray_vase.jpg)
 
-Après la visite du site et celle du musée attenant, nous déjeunons dans le village. Nous avons le ventre plein, il est seize heures, nous avons parcouru un tour petit peu plus de vingt kilomètres. 
+Après la visite du site et celle du musée attenant, nous déjeunons dans le village. Nous avons le ventre plein, il est seize heures, nous avons parcouru un tout petit peu plus de vingt kilomètres. 
 
 Pour rejoindre la nationale, nous passons sur dix kilomètres de pavés. C'est notre petit Paris-Roubaix turc. 
 
