--- a/exampleSite/content/blog/post-2023-04-08.md
+++ b/exampleSite/content/blog/post-2023-04-08.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons trouvé un bâtiment dont la construction a été abandonnée dans le centre ville de Delice. Nous profitons de l'occasion. 
