--- a/exampleSite/content/blog/post-2023-04-09.md
+++ b/exampleSite/content/blog/post-2023-04-09.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons notre nid douillet qui s'est révélé être une volière dès les premières heures du jour. 
