--- a/exampleSite/content/blog/post-2023-04-10.md
+++ b/exampleSite/content/blog/post-2023-04-10.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons notre squat qui nous a maintenu au chaud et au sec toute la nuit. 
