--- a/exampleSite/content/blog/post-2023-04-11.md
+++ b/exampleSite/content/blog/post-2023-04-11.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Pour notre centième jour d'aventure, nous décidons de prendre un jour de repos. Les facteurs sont multiples. D'une part, nous avons le sentiment de ne pas avoir profité de tout ce que la ville a à offrir. D'autre part, les conditions ne sont pas bonnes: Nicolas est malade et il pleut encore des cordes. 
