--- a/exampleSite/content/blog/post-2023-04-12.md
+++ b/exampleSite/content/blog/post-2023-04-12.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après un petit-déjeuner offert, nous allons pour remettre les bagages sur nos vélos. Le pneu arrière de Nicolas est dégonflé. Nous avons peut-être confondu vitesse et précipitation lors de la réparation à Çorum. 
