--- a/exampleSite/content/blog/post-2023-04-13.md
+++ b/exampleSite/content/blog/post-2023-04-13.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous sortons les vélos de l'entrée de l'immeuble qui nous a hébergé cette nuit. Nous mettons nos bagages en place dans la rue. Les chalands des cafés alentours interloqués par le processus viennent nous poser des questions. Par chance, il y en a un qui parle anglais et qui re-traduit à tout le monde. 
