--- a/exampleSite/content/blog/post-2023-04-14.md
+++ b/exampleSite/content/blog/post-2023-04-14.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nicolas a réparé sa chambre à air hier soir. Ce matin, après une grasse matinée, Nathan l'aide pour remonter son pneu. Un de nos deux démonte-pneus cède durant l'opération. 
