--- a/exampleSite/content/blog/post-2023-04-15.md
+++ b/exampleSite/content/blog/post-2023-04-15.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons trouvé refuge dans des toilettes en construction. A peine avons nous rangé nos affaires de couchage que trois ouvriers arrivent pour poser le lino. Notre timing est bon! 
