--- a/exampleSite/content/blog/post-2023-04-16.md
+++ b/exampleSite/content/blog/post-2023-04-16.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Pour la première fois depuis notre entrée en Turquie, nous n'avons pas entendu le muezzin annonçant le début du jeûne. Nous ne portions même pas de bouchons d'oreilles. Dommage de s'y habituer seulement maintenant alors que, dans quelques jours, nous serons sortis du pays. 
