--- a/exampleSite/content/blog/post-2023-04-17.md
+++ b/exampleSite/content/blog/post-2023-04-17.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous nous rendons dans le centre ville racheter des chambres à air. Pas de chance, celles qui sont disponibles ne sont pas compatibles avec nos pneus et jantes. Il faudra atteindre Tbilisi avec celles que nous avons. Nous profitons d'être en centre ville pour racheter de la crème pour l'entrejambe et du collagène pour nos tendons. 
