--- a/exampleSite/content/blog/post-2023-04-18.md
+++ b/exampleSite/content/blog/post-2023-04-18.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nathan commence sa journée par faire tomber la gourde de Nicolas. Elle casse. 
