--- a/exampleSite/content/blog/post-2023-04-19.md
+++ b/exampleSite/content/blog/post-2023-04-19.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons dormi dans un parking souterrain dans un bâtiment en construction. Une première pour nous et ce
