--- a/exampleSite/content/blog/post-2023-04-20.md
+++ b/exampleSite/content/blog/post-2023-04-20.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons dormi au trente-deuxième étage d'un gratte-ciel qui en compte cinquante-trois. La vue depuis le balcon est nuageuse et vertigineuse ce matin. 
