--- a/exampleSite/content/blog/post-2023-04-21.md
+++ b/exampleSite/content/blog/post-2023-04-21.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le réveil sonne, il est huit heures. Il pleut des cordes, nous l'éteignons et nous rendormons. La pluie se calme vers les onze heures. Nous avons dormi sous une table de pique-nique dans un petit parc dans lequel se trouve une minuscule chapelle. 
