--- a/exampleSite/content/blog/post-2023-04-22.md
+++ b/exampleSite/content/blog/post-2023-04-22.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Kutaisi et entrons dans une forêt. Nous nous croirions presque dans la forêt de Châteauroux lors de nos séances d'entraînement. Exception faite qu'ici ce ne sont pas les mêmes essences, nous sommes plus sur de l'érable et de l'orme. Autre différence, à notre droite nous avons les premiers reliefs du petit caucase qui forme une frontière naturelle avec la Turquie au sud et, à notre gauche les premières montagnes du grand caucase, formant la frontière avec la Russie au nord. 
