--- a/exampleSite/content/blog/post-2023-04-23.md
+++ b/exampleSite/content/blog/post-2023-04-23.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons décidé de poser nos matelas en contrebas du monastère. Bercés par les coassements des amphibiens de la mare voisine et les aboiements des chiens chassant les coyotes (ou l'inverse), nous nous endormons paisiblement. Il est une heure cinquante-huit, une fine pluie nous extirpe des bras de Morphée et nous contraint à déployer la toile. Deux heures quatorze, tout le monde est recouché au sec. 
