--- a/exampleSite/content/blog/post-2023-04-24.md
+++ b/exampleSite/content/blog/post-2023-04-24.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La nouvelle tombe, les frontières terrestres avec l'Azerbaïdjan sont fermées sous prétexte de covid 19. En réalité, l'Arménie et l'Azerbaïdjan sont en conflit à propos d'un territoire azerbaïdjanais où réside des arméniens: le haut Karabagh. La Géorgie se veut un médiateur neutre dans le conflit mais est dépeinte comme un allié de l'adversaire dans les deux pays. Pour renforcer ce mensonge, l'Azerbaïdjan a donc décidé de fermer la frontière en direction de son pays. La ministre des affaires étrangères française visitera d'ailleurs ces trois pays dans la semaine à la recherche d'une solution diplomatique. 
