--- a/exampleSite/content/blog/post-2023-04-25.md
+++ b/exampleSite/content/blog/post-2023-04-25.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après un repos bien mérité, nous nous rendons dans une laverie voisine. Pendant le lavage, nous visitons le quartier:
