--- a/exampleSite/content/blog/post-2023-04-26.md
+++ b/exampleSite/content/blog/post-2023-04-26.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Armés de notre carte de transport, nous revisitons le magasin de la veille qui proposait les bidons avec la plus grande contenance: seulement huit cents millilitres. 
