--- a/exampleSite/content/blog/post-2023-04-27.md
+++ b/exampleSite/content/blog/post-2023-04-27.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après un peu moins de six heures de sommeil, l'heure est venue de libérer l'appartement et de se rendre à l'aéroport. Nous décidons de le faire en deux fois, d'abord le vélo de Nicolas, puis celui de Nathan et le mien. 
