--- a/exampleSite/content/blog/post-2023-04-28.md
+++ b/exampleSite/content/blog/post-2023-04-28.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Notre vol est prévu pour demain. Nous passons notre journée et nuit dans l'aéroport, au moins c'est gratuit. Nous dormons par roulement, un de nous surveillant nos affaires à tout moment. Nicolas est debout d'une heure à trois heures trente, Nathan de trois heures trente à six heures trente et je fais six heures trente - neuf heures. Une pelouse synthétique sous un escalator nous sert de campement. 
