--- a/exampleSite/content/blog/post-2023-04-29.md
+++ b/exampleSite/content/blog/post-2023-04-29.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Notre vol vers le Kazakhstan est prévu pour vingt-et-une heures. Nous nous occupons avec un peu de lecture, des siestes, de la nourriture et nos téléphones. 
