--- a/exampleSite/content/blog/post-2023-04-30.md
+++ b/exampleSite/content/blog/post-2023-04-30.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nouvelle nuit dans un aéroport, nouveau roulement: Nicolas prend le premier à deux heures, je prends le second à cinq heures, Nathan ne se réveille pas pour le relais de huit heures. Nous avions trouvé un coin éteint dans l'aéroport. Malheureusement pour nous, la lumière se rallume et les embarquements s'enchaînent dès cinq heures. Nous dormons entre eux jusqu'à onze heures. 
