--- a/exampleSite/content/blog/post-2023-05-01.md
+++ b/exampleSite/content/blog/post-2023-05-01.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Aktau et la mer caspienne direction nord ouest. Le désert defile à bonne allure.
