--- a/exampleSite/content/blog/post-2023-05-02.md
+++ b/exampleSite/content/blog/post-2023-05-02.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La nuit a été mouvementée. Possiblement attirée par notre humidité ou de l'ombre pour le jour d'après, une horde de petits scarabées ont envahi notre campement dès la tombée de la nuit. Ils se glissent dans nos sacs de couchage avec une facilité déconcertante. C'est ensuite à nous de les déloger lorsqu'ils nous marchent dessus. Aussi abruptement qu'ils sont apparus, ils disparaissent avec les premières lueurs exceptés ceux qui sont à couverts.
