--- a/exampleSite/content/blog/post-2023-05-03.md
+++ b/exampleSite/content/blog/post-2023-05-03.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous sommes réveilles par les blaterements d'un dromadaire s'abreuvant dans une mare formée par les averses nocturnes. 
