--- a/exampleSite/content/blog/post-2023-05-04.md
+++ b/exampleSite/content/blog/post-2023-05-04.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Au moment où nous allions nous endormir, une voiture de police s'est arrêtée sur la nationale au niveau de notre campement se situant à une cinquantaine de mètres de la route. Ils donnent un coup de sirène, puis un deuxième. Le gyrophare illumine ensuite l'intérieur de la tente. Nous ne sortons pas, eux non plus. Vaincus, ils repartent. Drôle d'interaction! 
