rm recent posts

--- a/exampleSite/content/blog/post-2023-05-05.md
+++ b/exampleSite/content/blog/post-2023-05-05.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous profitons du petit-déjeuner inclus avec la chambre et retournons nous coucher. Deuxième réveil à midi pour profiter du restaurant offert par Sebastian.
