--- a/exampleSite/content/blog/post-2023-05-06.md
+++ b/exampleSite/content/blog/post-2023-05-06.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Les allemand et hollandais partent devant car ils se sont levés plus tôt. Trente minutes plus tard, c'est à notre tour. Sortir de la ville nécessite de traverser la voie de chemin de fer. Le passage à niveau le plus proche est fermée. Nous passons sur le côté pour éviter un détour de plusieurs kilomètres. 
