--- a/exampleSite/content/blog/post-2023-05-09.md
+++ b/exampleSite/content/blog/post-2023-05-09.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le soleil vient toquer à la porte de notre tente, il est sept heures trente. Tout le monde debout. 
