--- a/exampleSite/content/blog/post-2023-05-10.md
+++ b/exampleSite/content/blog/post-2023-05-10.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après une bonne nuit de repos, nous prenons la direction du musée qui occupe la place centrale de Nukus à quelques centaines de mètres de notre maison d'hôte. Il est majoritairement consacré aux artistes de l'avant-garde russe des années vingt dont le style était en opposition avec le réalisme promu par l'URSS et le culte de la personnalité stalinienne. 
