--- a/exampleSite/content/blog/post-2023-05-11.md
+++ b/exampleSite/content/blog/post-2023-05-11.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous disons au revoir à nos hôtes et regagnons la route.
@@ -44,7 +44,7 @@ Détour vers Khiva, la ville des peintures de la veille, la route se dégrade tr
 
 {{< youtube Ii-uNRMeumE >}} 
 
-Les kilomètres de mauvaise route défilent. L'aspect le plus frustrant étant que les tronçons de revêtement acceptables sont entrecoupés de sections en mauvaise état tous les cinq cent mètres. Nous avons à peine le temps de relancer et de se remettre dans les prolongateurs qu'il faut de nouveau freiner ou passer sur les bas côtés qui sont très souvent en meilleur état. 
+Les kilomètres de mauvaise route défilent. L'aspect le plus frustrant étant que les tronçons de revêtement acceptables sont entrecoupés de sections en mauvaise état tous les cinq cent mètres. Nous avons à peine le temps de relancer et de se remettre dans les prolongateurs qu'il faut de nouveau freiner ou passer sur les bas côtés qui sont très souvent en meilleur état. Les enfants des maisons avoisinantes nous lancent des "hellos" constamment mais c'est à peine si nous levons un bras tellement notre attention est concentrée sur la route.
 
 Pour casser la monotonie, nous faisons une pause quatre heures puis échangeons nos vélos. 
 
