--- a/exampleSite/content/blog/post-2023-05-12.md
+++ b/exampleSite/content/blog/post-2023-05-12.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous prenons un jour de repos pour profiter de cette magnifique ville. Elle fût fondée sur une oasis au bord du désert de Karakoum. Selon la légende, c'est ici que Sem, le fils de Noé (celui de l'arche), creusa le puits de Keivah d'où la ville tirerait son nom. 
