--- a/exampleSite/content/blog/post-2023-05-13.md
+++ b/exampleSite/content/blog/post-2023-05-13.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La chambre d'hôtes qui nous accueille n'a plus de place pour nous pour une troisième nuit. Nous déménageons à l'extérieur de la forteresse dans un petit appartement. 
