--- a/exampleSite/content/blog/post-2023-05-14.md
+++ b/exampleSite/content/blog/post-2023-05-14.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le réveil sonne, il est six heures. C'est au tour de Nathan d'être malade ce matin. Ce sera le tour de Nicolas et moi plus tard, sur la route. Dorénavant, nous nous contenterons des conserves et des pâtes, finis les produis laitiers, les œufs ou les raviolis frais. 
