--- a/exampleSite/content/blog/post-2023-05-15.md
+++ b/exampleSite/content/blog/post-2023-05-15.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Reveil derrière une dune, le vent a soufflé si fort qu'il a ensablé la tente de Thibault. La maille de la nôtre est assez fine, la quantité de sable qui s'est infiltrée est minime. J'ouvre la fermeture éclair et un scarabée est en train de percer l'opercule du beurre de cacahuètes. Je projette cet insecte, en quête de sensations fortes, de quelques mètres avec une bonne pichenette. 
