--- a/exampleSite/content/blog/post-2023-05-16.md
+++ b/exampleSite/content/blog/post-2023-05-16.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Frappé par une intoxication alimentaire, Nathan a été malade toute la nuit. Il restera cloué au lit toute la journée à se refaire la santé avec de l'eau sucrée. 
