--- a/exampleSite/content/blog/post-2023-05-17.md
+++ b/exampleSite/content/blog/post-2023-05-17.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nouvelle journée qui commence comme celle d'hier: grasse matinée interrompue uniquement par le petit déjeuner offert à neuf heures. 
