--- a/exampleSite/content/blog/post-2023-05-18.md
+++ b/exampleSite/content/blog/post-2023-05-18.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Il y a deux routes menant à Samarkand, notre prochaine étape. Thibault prend celle du nord pour faire du stop. Nous continuons sur l'A-380, celle du sud. Nous nous retrouverons sûrement sur place. 
