--- a/exampleSite/content/blog/post-2023-05-19.md
+++ b/exampleSite/content/blog/post-2023-05-19.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous partageons notre petit-déjeuner avec les fourmis, les mille-pattes et les cloportes. 
