--- a/exampleSite/content/blog/post-2023-05-20.md
+++ b/exampleSite/content/blog/post-2023-05-20.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons dormi au bord d'un champ de Khorasan, le blé local. Ici, les moissons ont déjà eu lieu. 
