--- a/exampleSite/content/blog/post-2023-05-21.md
+++ b/exampleSite/content/blog/post-2023-05-21.md
@@ -62,3 +62,5 @@ Nous terminons par le complexe funéraire de Tamerlan. Anecdote amusante: le jou
 
 ![image](../../images/post/samarkand_timurstatue.jpg)
 ![image](../../images/post/samarkand_timur.jpg)
+
+{{< youtube omFdBZhbBcQ >}}
