--- a/exampleSite/content/blog/post-2023-05-21.md
+++ b/exampleSite/content/blog/post-2023-05-21.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous restons dans notre chambre jusqu'à ce que les assauts du soleil se calment, c'est-à-dire aux environs de dix-sept heures trente. Nous ne sortons que pour étendre notre linge et commencer notre cure de pastèques. 
