--- a/exampleSite/content/blog/post-2023-05-22.md
+++ b/exampleSite/content/blog/post-2023-05-22.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons fait le tour de tout ce que nous voulions voir hier, aujourd'hui c'est farniente. 
