--- a/exampleSite/content/blog/post-2023-05-23.md
+++ b/exampleSite/content/blog/post-2023-05-23.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Les petits-déjeuners sont ridicules dans cette chambre d'hôtes: un œuf, une bouchée de saucisse et une tranche de pain. Je sors les quatre cents grammes de pâtes cuites la veille que j'arrose de lait concentré. Comme diraient certains: "repas de rois!". 
