--- a/exampleSite/content/blog/post-2023-05-24.md
+++ b/exampleSite/content/blog/post-2023-05-24.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 C'est la première fois que nous crampons en montagne depuis la Géorgie! 
