--- a/exampleSite/content/blog/post-2023-05-25.md
+++ b/exampleSite/content/blog/post-2023-05-25.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous avons placé notre campement entre deux conteneurs. Si on fronce les sourcils, on pourrait presque y voir un drapeau français. 
