--- a/exampleSite/content/blog/post-2023-05-27.md
+++ b/exampleSite/content/blog/post-2023-05-27.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Une nuée de moustiques est restée au dessus de la tente une bonne partie de la nuit. Leurs bourdonnements ont fini par nous bercer dès vingt-et-une heures. Le réveil commence dès sept heures moins le quart. A mesure que le soleil monte, les moustiques disparaissent. Nous rangeons nos affaires et retournons nous baigner. 
