--- a/exampleSite/content/blog/post-2023-05-28.md
+++ b/exampleSite/content/blog/post-2023-05-28.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Dès les sept heures, le soleil nous fait sortir de notre sac à viande. Nous n'avons pas correctement orienté notre tente par rapport aux ormes bordant le chemin agricole en parallèle duquel nous avons installé la tente. Je suis le seul à bénéficier d'ombre. 
