--- a/exampleSite/content/blog/post-2023-05-29.md
+++ b/exampleSite/content/blog/post-2023-05-29.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le colis est arrivé sur le sol ouzbek mais il est pour l'instant bloqué aux douanes. 
