--- a/exampleSite/content/blog/post-2023-05-31.md
+++ b/exampleSite/content/blog/post-2023-05-31.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le colis aurait passé la douane mais serait maintenant bloqué chez le transporteur. 
