--- a/exampleSite/content/blog/post-2023-06-01.md
+++ b/exampleSite/content/blog/post-2023-06-01.md
@@ -28,11 +28,15 @@ Le colis serait toujours bloqué chez le transporteur. Je décide de prendre les
 
 Nous attendons que la chaleur diminue avec une sieste puis changeons nos pneus. Ils sont plus larges, plus crantés et acceptent de plus faibles pressions que les anciens. Tous ces facteurs devraient nous aider pour les montagnes kirghizes. 
 
+{{< youtube 23SwlVdkp-c >}}
+
 Il faut maintenant changer la manette de dérailleur avant de Nicolas. L'exercice est bien plus simple que pour celle du dérailleur arrière de Nathan que nous avions changée en Slovénie.
 
-Nous allons manger et, ensuite, c'est direction la station de lavage automobile la plus proche. J'ai lavé les chaînes hier, hors de question de la remettre sur une cassette et des plateaux sales. Nous faisons donc trois kilomètres de patinette en équilibre sur une pédale pour nous rendre sur place. 
+Nous allons manger et, ensuite, c'est direction la station de lavage automobile la plus proche. J'ai lavé les chaînes hier, hors de question de la remettre sur une cassette et des plateaux sales. Nous faisons donc trois kilomètres de patinette en équilibre sur une pédale pour nous rendre sur place. Arrivés, on nous offre le coup de jet haute pression, sympa!
 
-Arrivés, on nous offre le coup de jet haute pression, sympa! Il est bientôt minuit, il est temps de rentrer, à coups de patinette bien sûr. Nous commençons à cadenasser nos vélos pour la nuit lorsque Nicolas se rend compte qu'il a perdu sa trousse à outils. Il part chercher les frontales, nous relions les chaînes et nous voilà repartis. Je pars de mon côté à pieds tandis que Nicolas et Nathan partent à vélo. 
+{{< youtube HdGJLaCiaAE >}}
+
+Il est bientôt minuit, il est temps de rentrer, à coups de patinette bien sûr. Nous commençons à cadenasser nos vélos pour la nuit lorsque Nicolas se rend compte qu'il a perdu sa trousse à outils. Il part chercher les frontales, nous relions les chaînes et nous voilà repartis. Je pars de mon côté à pieds tandis que Nicolas et Nathan partent à vélo. 
 
 Il est bientôt une heure du matin et nous rentrons tous sans la trousse. Nous avons perdu:
 - le démonte-cassette
