--- a/exampleSite/content/blog/post-2023-06-01.md
+++ b/exampleSite/content/blog/post-2023-06-01.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le colis serait toujours bloqué chez le transporteur. Je décide de prendre les choses en main et me rends au dépôt en milieu de matinée. Cette stratégie s'avère être la bonne, on me fait enfin parvenir le colis dans l'heure. 
