--- a/exampleSite/content/blog/post-2023-06-02.md
+++ b/exampleSite/content/blog/post-2023-06-02.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons enfin l'auberge de jeunesse. Nous ne faisons pas cemt mètres que Nathan et moi décelons un problème avec nos roues avant. Les tringles des pneus ne sont pas totalement en contact avec la jante ce qui entraîne le fait que la roue tourne carrée. Il est tellement impossible d'échapper aux nids de poules ouzbeks qu'ils sont intégrés dans le vélo maintenant. A force de dégonflage, démontage et mise en surpression, les pneus finissent par claquer et sont maintenant parfaitement en pression contre l'intérieur de la jante. Nous avons perdu une bonne heure. 
