--- a/exampleSite/content/blog/post-2023-06-03.md
+++ b/exampleSite/content/blog/post-2023-06-03.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous replions la tente pour prendre notre petit-déjeuner sous la voie ferrée, à l'ombre. 
