--- a/exampleSite/content/blog/post-2023-06-04.md
+++ b/exampleSite/content/blog/post-2023-06-04.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous nous réveillons à l'ombre d'un buisson. Le propriétaire du verger attenant nous apporte un kilogramme d'abricots fraîchement cueillis. C'est une variété à la peau lisse et un calibre plus petit que celles auxquelles nous sommes habitués. Elles sont néanmoins très bonnes et accompagnent parfaitement notre petit-déjeuner. 
