--- a/exampleSite/content/blog/post-2023-06-05.md
+++ b/exampleSite/content/blog/post-2023-06-05.md
@@ -15,13 +15,14 @@ categories:
   - "Aventure" 
   - "Bikepacking"
   - "Ouzbékistan" 
+  - "Kirghizstan" 
 tags:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le propriétaire du verger nous réveille avec un petit-déjeuner copieux:
