--- a/exampleSite/content/blog/post-2023-06-06.md
+++ b/exampleSite/content/blog/post-2023-06-06.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous prenons un jour de repos à Osh afin de préparer notre traversée du Kirghizstan. La première étape est un supermarché où nous faisons nos provisions pour les jours à venir. Nous passons par le bazar local qui est à l'ombre sous l'artère principale de la ville. 
