--- a/exampleSite/content/blog/post-2023-06-07.md
+++ b/exampleSite/content/blog/post-2023-06-07.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Osh, direction le nord-est. C'est l'une des dernières étapes de plaine avant un bout de temps. Nous attaquons les soubresauts du relief avec facilité. Le bitume fond tellement que la chaussée paraît détrempée. 
